--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Dianavi22.github.io/cv-react",
+  "homepage": "https://dianavi22.github.io/cv-react",
   "name": "react-cv",
   "version": "0.1.0",
   "private": true,
