--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeloy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
